# solana-stablecoin-standardx

./: .dockerignore  .gitattributes  .gitignore  Anchor.toml  Bounty.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PR.md  README.md  SECURITY.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
docs/: API.md  ARCHITECTURE.md  CLI.md  COMPLIANCE.md  OPERATIONS.md  SDK.md  SSS-1.md  SSS-2.md  SSS-3.md  SSS-Oracle.md
programs/sss-oracle/: Cargo.toml
programs/sss-oracle/src/: errors.rs  events.rs  lib.rs
programs/sss-oracle/src/instructions/: add_feed.rs  aggregate.rs  close_oracle.rs  crank_feed.rs  get_mint_price.rs  get_redeem_price.rs  initialize_oracle.rs  mod.rs  remove_feed.rs  set_manual_price.rs  transfer_oracle_authority.rs  update_oracle_config.rs
programs/sss-oracle/src/math/: aggregation.rs  fixed_point.rs  mod.rs
programs/sss-oracle/src/state/: mod.rs  oracle_config.rs  price_feed_entry.rs
programs/sss-token/: Cargo.toml
programs/sss-token/src/: errors.rs  events.rs  lib.rs
programs/sss-token/src/instructions/: mod.rs
programs/sss-token/src/instructions/account/: freeze_account.rs  mod.rs  thaw_account.rs
programs/sss-token/src/instructions/admin/: mod.rs  pause.rs  transfer_authority.rs  unpause.rs  update_roles.rs
programs/sss-token/src/instructions/minter/: add_minter.rs  mod.rs  remove_minter.rs  update_minter.rs
programs/sss-token/src/instructions/sss2/: add_to_blacklist.rs  mod.rs  remove_from_blacklist.rs  seize.rs
programs/sss-token/src/instructions/sss3/: approve_account.rs  disable_confidential_credits.rs  enable_confidential_credits.rs  mod.rs
programs/sss-token/src/instructions/token_core/: burn.rs  close_mint.rs  get_supply.rs  initialize.rs  metaplex_metadata.rs  mint.rs  mod.rs
programs/sss-token/src/state/: blacklist_entry.rs  minter_quota.rs  mod.rs  roles_config.rs  stablecoin_config.rs
programs/transfer-hook/: Cargo.toml
programs/transfer-hook/src/: errors.rs  execute.rs  initialize_extra_account_meta_list.rs  lib.rs
services/: .env.example  .gitignore  Dockerfile  README.md  drizzle.config.ts  package.json
tests/: integration.ts  metaplex-metadata.ts  sss-oracle.ts  sss-token.ts  sss3-privacy.ts  transfer-hook.ts
trident-tests/: Cargo.toml  README.md  Trident.toml
trident-tests/fuzz_oracle/: fuzz_accounts.rs  test_fuzz.rs
trident-tests/fuzz_sss_token/: fuzz_accounts.rs  invariants.rs  test_fuzz.rs  types.rs
trident-tests/fuzz_transfer_hook/: fuzz_accounts.rs  test_fuzz.rs
(+32 files in other folders)
