[package]
name = "sss-oracle"
version = "0.1.0"
description = "SSS Oracle Integration Module — Switchboard feeds for non-USD stablecoin pegs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_oracle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.32.1" }