[package]
name = "transfer-hook"
version = "0.1.0"
description = "SSS-2 transfer hook — enforces blacklist checks on every Token-2022 transfer"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.32.1" }
anchor-spl = { version = "0.32.1", features = ["token_2022", "token_2022_extensions"] }
spl-transfer-hook-interface = "0.9.0"
spl-tlv-account-resolution = "0.9.0"